# stroke2

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
data/: index.html
docs/: data.md  home.md  statistics.md  visualization.md
home/: index.html
statistics/: index.html
streamlit_app/: app.py
streamlit_app/pages/: data.py  home.py  statistics.py  visualization.py
stroke_api/: API_tuto.ipynb  api.py  filters.py
stroke_api/data/: clean_health.parquet
visualization/: index.html
